nginx/nginx_pod.yaml
apiVersion: v1
kind: Pod
metadata:
	name: nginx
	labels:
		app: nginx
spec:
	containers:
	- name: nginx
		image: nginx-container
		ports:
		- containerPort: 80
