nginx/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx-app
spec:
  containers:
  - name: nginx-container
    image: nginx-container
    command: ['sh', '-c', 'nginx start && sleep infinity']
